@@ -4,6 +4,12 @@ QXGEdit - Qt XG Editor
 ChangeLog
 
 
+GIT HEAD
+
+- Re-defined all main application UNIX signal handling.
+  (EXPERIMENTAL)
+
+
 0.5.4  2019-03-11  Pre-LAC2019 Release Frenzy.
 
 - HiDPI display screen support (Qt >= 5.6).
